# serializer version: 1
# name: TestFilterSessionReplaysByConsoleLogs.test_select_by_console_log_text
  '''
  SELECT DISTINCT session_replay_events.session_id AS session_id
  FROM session_replay_events
  LEFT JOIN
    (SELECT console_logs_log_entries.message AS message,
            console_logs_log_entries.log_source_id AS log_source_id
     FROM
       (SELECT log_entries.message AS message,
               log_entries.log_source_id AS log_source_id
        FROM log_entries
        WHERE and(equals(log_entries.team_id, 99999), equals(log_entries.log_source, 'session_replay'))) AS console_logs_log_entries) AS raw_session_replay_events__console_logs ON equals(session_replay_events.session_id, raw_session_replay_events__console_logs.log_source_id)
  WHERE and(equals(session_replay_events.team_id, 99999), equals(raw_session_replay_events__console_logs.message, 'This is a generic message'))
  ORDER BY session_replay_events.session_id ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestFilterSessionReplaysByConsoleLogs.test_select_by_console_log_text_and_level
  '''
  SELECT DISTINCT session_replay_events.session_id AS session_id
  FROM session_replay_events
  LEFT JOIN
    (SELECT console_logs_log_entries.message AS message,
            console_logs_log_entries.level AS level,
            console_logs_log_entries.log_source_id AS log_source_id
     FROM
       (SELECT log_entries.message AS message,
               log_entries.level AS level,
               log_entries.log_source_id AS log_source_id
        FROM log_entries
        WHERE and(equals(log_entries.team_id, 99999), equals(log_entries.log_source, 'session_replay'))) AS console_logs_log_entries) AS raw_session_replay_events__console_logs ON equals(session_replay_events.session_id, raw_session_replay_events__console_logs.log_source_id)
  WHERE and(equals(session_replay_events.team_id, 99999), equals(raw_session_replay_events__console_logs.message, 'This is a generic message'), equals(raw_session_replay_events__console_logs.level, 'error'))
  ORDER BY session_replay_events.session_id ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestFilterSessionReplaysByConsoleLogs.test_select_log_text
  '''
  SELECT DISTINCT raw_session_replay_events__console_logs.message AS message
  FROM session_replay_events
  LEFT JOIN
    (SELECT console_logs_log_entries.message AS message,
            console_logs_log_entries.level AS level,
            console_logs_log_entries.log_source_id AS log_source_id
     FROM
       (SELECT log_entries.message AS message,
               log_entries.level AS level,
               log_entries.log_source_id AS log_source_id
        FROM log_entries
        WHERE and(equals(log_entries.team_id, 99999), equals(log_entries.log_source, 'session_replay'))) AS console_logs_log_entries) AS raw_session_replay_events__console_logs ON equals(session_replay_events.session_id, raw_session_replay_events__console_logs.log_source_id)
  WHERE and(equals(session_replay_events.team_id, 99999), equals(raw_session_replay_events__console_logs.level, 'info'))
  ORDER BY session_replay_events.session_id ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestFilterSessionReplaysByEvents.test_select_by_event
  '''
  SELECT DISTINCT session_replay_events.session_id AS session_id
  FROM session_replay_events
  JOIN
    (SELECT events.event AS event,
            events.`$session_id` AS `$session_id`
     FROM events PREWHERE greaterOrEquals(events.timestamp, minus(toDateTime64('today', 6, 'UTC'), toIntervalDay(90)))
     WHERE equals(events.team_id, 99999)) AS raw_session_replay_events__events ON equals(session_replay_events.session_id, raw_session_replay_events__events.`$session_id`)
  WHERE and(equals(session_replay_events.team_id, 99999), equals(raw_session_replay_events__events.event, '$pageview'))
  ORDER BY session_replay_events.session_id ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestFilterSessionReplaysByEvents.test_select_by_event[new_events_schema]
  '''
  SELECT DISTINCT session_replay_events.session_id AS session_id
  FROM session_replay_events
  JOIN
    (SELECT events.event AS event,
            events.`$session_id` AS `$session_id`
     FROM events_json AS events PREWHERE greaterOrEquals(events.timestamp, minus(toDateTime64('today', 6, 'UTC'), toIntervalDay(90)))
     WHERE equals(events.team_id, 99999)) AS raw_session_replay_events__events ON equals(session_replay_events.session_id, raw_session_replay_events__events.`$session_id`)
  WHERE and(equals(session_replay_events.team_id, 99999), equals(raw_session_replay_events__events.event, '$pageview'))
  ORDER BY session_replay_events.session_id ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestFilterSessionReplaysByEvents.test_select_by_event_property
  '''
  SELECT DISTINCT session_replay_events.session_id AS session_id
  FROM session_replay_events
  JOIN
    (SELECT replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, '$current_url'), ''), 'null'), '^"|"$', '') AS `properties___$current_url`,
            events.`$session_id` AS `$session_id`
     FROM events PREWHERE greaterOrEquals(events.timestamp, minus(toDateTime64('today', 6, 'UTC'), toIntervalDay(90)))
     WHERE equals(events.team_id, 99999)) AS raw_session_replay_events__events ON equals(session_replay_events.session_id, raw_session_replay_events__events.`$session_id`)
  WHERE and(equals(session_replay_events.team_id, 99999), ifNull(like(raw_session_replay_events__events.`properties___$current_url`, '%example.com%'), 0))
  ORDER BY session_replay_events.session_id ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestFilterSessionReplaysByEvents.test_select_by_event_property[new_events_schema]
  '''
  SELECT DISTINCT session_replay_events.session_id AS session_id
  FROM session_replay_events
  JOIN
    (SELECT nullIf(nullIf(events.properties.`$current_url`, ''), 'null') AS `properties___$current_url`,
            events.`$session_id` AS `$session_id`
     FROM events_json AS events PREWHERE greaterOrEquals(events.timestamp, minus(toDateTime64('today', 6, 'UTC'), toIntervalDay(90)))
     WHERE equals(events.team_id, 99999)) AS raw_session_replay_events__events ON equals(session_replay_events.session_id, raw_session_replay_events__events.`$session_id`)
  WHERE and(equals(session_replay_events.team_id, 99999), ifNull(like(raw_session_replay_events__events.`properties___$current_url`, '%example.com%'), 0))
  ORDER BY session_replay_events.session_id ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestFilterSessionReplaysByEvents.test_select_by_subquery_on_event_property_without_join
  '''
  SELECT DISTINCT session_replay_events.session_id AS session_id
  FROM session_replay_events
  WHERE and(equals(session_replay_events.team_id, 99999), in(session_replay_events.session_id,
                                                               (SELECT events.`$session_id` AS `$session_id`
                                                                FROM events
                                                                WHERE and(equals(events.team_id, 99999), ifNull(like(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, '$current_url'), ''), 'null'), '^"|"$', ''), '%example.com%'), 0)))))
  ORDER BY session_replay_events.session_id ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestFilterSessionReplaysByEvents.test_select_by_subquery_on_event_property_without_join[new_events_schema]
  '''
  SELECT DISTINCT session_replay_events.session_id AS session_id
  FROM session_replay_events
  WHERE and(equals(session_replay_events.team_id, 99999), in(session_replay_events.session_id,
                                                               (SELECT events.`$session_id` AS `$session_id`
                                                                FROM events_json AS events
                                                                WHERE and(equals(events.team_id, 99999), and(like(events.properties.`$current_url`, '%example.com%'), isNotNull(events.properties.`$current_url`))))))
  ORDER BY session_replay_events.session_id ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestFilterSessionReplaysByEvents.test_select_event_property
  '''
  SELECT session_replay_events.session_id AS session_id,
         any(raw_session_replay_events__events.`properties___$current_url`) AS `any(events.properties.$current_url)`
  FROM session_replay_events
  JOIN
    (SELECT replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, '$current_url'), ''), 'null'), '^"|"$', '') AS `properties___$current_url`,
            events.`$session_id` AS `$session_id`
     FROM events PREWHERE greaterOrEquals(events.timestamp, minus(toDateTime64('today', 6, 'UTC'), toIntervalDay(90)))
     WHERE equals(events.team_id, 99999)) AS raw_session_replay_events__events ON equals(session_replay_events.session_id, raw_session_replay_events__events.`$session_id`)
  WHERE equals(session_replay_events.team_id, 99999)
  GROUP BY session_replay_events.session_id
  ORDER BY session_replay_events.session_id ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestFilterSessionReplaysByEvents.test_select_event_property[new_events_schema]
  '''
  SELECT session_replay_events.session_id AS session_id,
         any(raw_session_replay_events__events.`properties___$current_url`) AS `any(events.properties.$current_url)`
  FROM session_replay_events
  JOIN
    (SELECT nullIf(nullIf(events.properties.`$current_url`, ''), 'null') AS `properties___$current_url`,
            events.`$session_id` AS `$session_id`
     FROM events_json AS events PREWHERE greaterOrEquals(events.timestamp, minus(toDateTime64('today', 6, 'UTC'), toIntervalDay(90)))
     WHERE equals(events.team_id, 99999)) AS raw_session_replay_events__events ON equals(session_replay_events.session_id, raw_session_replay_events__events.`$session_id`)
  WHERE equals(session_replay_events.team_id, 99999)
  GROUP BY session_replay_events.session_id
  ORDER BY session_replay_events.session_id ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestFilterSessionReplaysByPerson.test_select_by_event_person
  '''
  SELECT DISTINCT session_replay_events.session_id AS session_id
  FROM session_replay_events
  JOIN
    (SELECT if(not(empty(events__override.distinct_id)), events__override.person_id, events.person_id) AS raw_session_replay_events__events___person_id,
            events.`$session_id` AS `$session_id`
     FROM events
     LEFT OUTER JOIN
       (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
               person_distinct_id_overrides.distinct_id AS distinct_id
        FROM person_distinct_id_overrides
        WHERE equals(person_distinct_id_overrides.team_id, 99999)
        GROUP BY person_distinct_id_overrides.distinct_id
        HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS events__override ON equals(events.distinct_id, events__override.distinct_id) PREWHERE greaterOrEquals(events.timestamp, minus(toDateTime64('today', 6, 'UTC'), toIntervalDay(90)))
     WHERE equals(events.team_id, 99999)) AS raw_session_replay_events__events ON equals(session_replay_events.session_id, raw_session_replay_events__events.`$session_id`)
  LEFT JOIN
    (SELECT person.id AS id,
            replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'person_property'), ''), 'null'), '^"|"$', '') AS properties___person_property
     FROM person
     WHERE and(equals(person.team_id, 99999), in(tuple(person.id, person.version),
                                                   (SELECT person.id AS id, max(person.version) AS version
                                                    FROM person
                                                    WHERE equals(person.team_id, 99999)
                                                    GROUP BY person.id
                                                    HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))))) SETTINGS optimize_aggregation_in_order=1) AS raw_session_replay_events__events__person ON equals(raw_session_replay_events__events.raw_session_replay_events__events___person_id, raw_session_replay_events__events__person.id)
  WHERE and(equals(session_replay_events.team_id, 99999), ifNull(equals(ifNull(raw_session_replay_events__events__person.properties___person_property, 'false'), 'true'), 0))
  ORDER BY session_replay_events.session_id ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestFilterSessionReplaysByPerson.test_select_by_event_person[new_events_schema]
  '''
  SELECT DISTINCT session_replay_events.session_id AS session_id
  FROM session_replay_events
  JOIN
    (SELECT if(not(empty(events__override.distinct_id)), events__override.person_id, events.person_id) AS raw_session_replay_events__events___person_id,
            events.`$session_id` AS `$session_id`
     FROM events_json AS events
     LEFT OUTER JOIN
       (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
               person_distinct_id_overrides.distinct_id AS distinct_id
        FROM person_distinct_id_overrides
        WHERE equals(person_distinct_id_overrides.team_id, 99999)
        GROUP BY person_distinct_id_overrides.distinct_id
        HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS events__override ON equals(events.distinct_id, events__override.distinct_id) PREWHERE greaterOrEquals(events.timestamp, minus(toDateTime64('today', 6, 'UTC'), toIntervalDay(90)))
     WHERE equals(events.team_id, 99999)) AS raw_session_replay_events__events ON equals(session_replay_events.session_id, raw_session_replay_events__events.`$session_id`)
  LEFT JOIN
    (SELECT person.id AS id,
            replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'person_property'), ''), 'null'), '^"|"$', '') AS properties___person_property
     FROM person
     WHERE and(equals(person.team_id, 99999), in(tuple(person.id, person.version),
                                                   (SELECT person.id AS id, max(person.version) AS version
                                                    FROM person
                                                    WHERE equals(person.team_id, 99999)
                                                    GROUP BY person.id
                                                    HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))))) SETTINGS optimize_aggregation_in_order=1) AS raw_session_replay_events__events__person ON equals(raw_session_replay_events__events.raw_session_replay_events__events___person_id, raw_session_replay_events__events__person.id)
  WHERE and(equals(session_replay_events.team_id, 99999), ifNull(equals(ifNull(raw_session_replay_events__events__person.properties___person_property, 'false'), 'true'), 0))
  ORDER BY session_replay_events.session_id ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestFilterSessionReplaysByPerson.test_select_by_person_distinct_id
  '''
  SELECT DISTINCT session_replay_events.session_id AS session_id
  FROM session_replay_events
  INNER JOIN
    (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
            person_distinct_id2.distinct_id AS distinct_id
     FROM person_distinct_id2
     WHERE equals(person_distinct_id2.team_id, 99999)
     GROUP BY person_distinct_id2.distinct_id
     HAVING equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0) SETTINGS optimize_aggregation_in_order=1) AS raw_session_replay_events__pdi ON equals(session_replay_events.distinct_id, raw_session_replay_events__pdi.distinct_id)
  WHERE and(equals(session_replay_events.team_id, 99999), equals(raw_session_replay_events__pdi.distinct_id, 'd1'))
  ORDER BY session_replay_events.session_id ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestFilterSessionReplaysByPerson.test_select_by_replay_person
  '''
  SELECT DISTINCT session_replay_events.session_id AS session_id
  FROM session_replay_events
  INNER JOIN
    (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS raw_session_replay_events__pdi___person_id,
            argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
            person_distinct_id2.distinct_id AS distinct_id
     FROM person_distinct_id2
     WHERE equals(person_distinct_id2.team_id, 99999)
     GROUP BY person_distinct_id2.distinct_id
     HAVING equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0) SETTINGS optimize_aggregation_in_order=1) AS raw_session_replay_events__pdi ON equals(session_replay_events.distinct_id, raw_session_replay_events__pdi.distinct_id)
  LEFT JOIN
    (SELECT person.id AS id
     FROM person
     WHERE equals(person.team_id, 99999)
     GROUP BY person.id
     HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1)))) SETTINGS optimize_aggregation_in_order=1) AS raw_session_replay_events__pdi__person ON equals(raw_session_replay_events__pdi.raw_session_replay_events__pdi___person_id, raw_session_replay_events__pdi__person.id)
  WHERE and(equals(session_replay_events.team_id, 99999), equals(raw_session_replay_events__pdi__person.id, toUUIDOrNull('00000000-0000-4000-8000-000000000000')))
  ORDER BY session_replay_events.session_id ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestFilterSessionReplaysByPerson.test_select_person_property
  '''
  SELECT session_replay_events.session_id AS session_id,
         any(raw_session_replay_events__pdi__person.properties___person_property) AS `any(person.properties.person_property)`
  FROM session_replay_events
  INNER JOIN
    (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS raw_session_replay_events__pdi___person_id,
            argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
            person_distinct_id2.distinct_id AS distinct_id
     FROM person_distinct_id2
     WHERE equals(person_distinct_id2.team_id, 99999)
     GROUP BY person_distinct_id2.distinct_id
     HAVING equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0) SETTINGS optimize_aggregation_in_order=1) AS raw_session_replay_events__pdi ON equals(session_replay_events.distinct_id, raw_session_replay_events__pdi.distinct_id)
  LEFT JOIN
    (SELECT person.id AS id,
            replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'person_property'), ''), 'null'), '^"|"$', '') AS properties___person_property
     FROM person
     WHERE and(equals(person.team_id, 99999), in(tuple(person.id, person.version),
                                                   (SELECT person.id AS id, max(person.version) AS version
                                                    FROM person
                                                    WHERE equals(person.team_id, 99999)
                                                    GROUP BY person.id
                                                    HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))))) SETTINGS optimize_aggregation_in_order=1) AS raw_session_replay_events__pdi__person ON equals(raw_session_replay_events__pdi.raw_session_replay_events__pdi___person_id, raw_session_replay_events__pdi__person.id)
  WHERE equals(session_replay_events.team_id, 99999)
  GROUP BY session_replay_events.session_id
  ORDER BY session_replay_events.session_id ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestFilterSessionReplaysByPerson.test_select_where_person_property_with_join_optimization
  '''
  SELECT session_replay_events.session_id AS session_id,
         any(raw_session_replay_events__pdi__person.properties___person_property) AS `any(person.properties.person_property)`
  FROM session_replay_events
  INNER JOIN
    (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS raw_session_replay_events__pdi___person_id,
            argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
            person_distinct_id2.distinct_id AS distinct_id
     FROM person_distinct_id2
     WHERE equals(person_distinct_id2.team_id, 99999)
     GROUP BY person_distinct_id2.distinct_id
     HAVING equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0) SETTINGS optimize_aggregation_in_order=1) AS raw_session_replay_events__pdi ON equals(session_replay_events.distinct_id, raw_session_replay_events__pdi.distinct_id)
  LEFT JOIN
    (SELECT person.id AS id,
            replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'person_property'), ''), 'null'), '^"|"$', '') AS properties___person_property
     FROM person
     WHERE and(equals(person.team_id, 99999), in(tuple(person.id, person.version),
                                                   (SELECT person.id AS id, max(person.version) AS version
                                                    FROM person
                                                    WHERE equals(person.team_id, 99999)
                                                    GROUP BY person.id
                                                    HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1)))))), ifNull(equals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'person_property'), ''), 'null'), '^"|"$', ''), 'true'), 0)) SETTINGS optimize_aggregation_in_order=1) AS raw_session_replay_events__pdi__person ON equals(raw_session_replay_events__pdi.raw_session_replay_events__pdi___person_id, raw_session_replay_events__pdi__person.id)
  WHERE and(equals(session_replay_events.team_id, 99999), ifNull(equals(raw_session_replay_events__pdi__person.properties___person_property, 'true'), 0))
  GROUP BY session_replay_events.session_id
  ORDER BY session_replay_events.session_id ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestFilterSessionReplaysByPerson.test_select_where_person_property_without_join_optimization
  '''
  SELECT session_replay_events.session_id AS session_id,
         any(raw_session_replay_events__pdi__person.properties___person_property) AS `any(person.properties.person_property)`
  FROM session_replay_events
  INNER JOIN
    (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS raw_session_replay_events__pdi___person_id,
            argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
            person_distinct_id2.distinct_id AS distinct_id
     FROM person_distinct_id2
     WHERE equals(person_distinct_id2.team_id, 99999)
     GROUP BY person_distinct_id2.distinct_id
     HAVING equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0) SETTINGS optimize_aggregation_in_order=1) AS raw_session_replay_events__pdi ON equals(session_replay_events.distinct_id, raw_session_replay_events__pdi.distinct_id)
  LEFT JOIN
    (SELECT person.id AS id,
            replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'person_property'), ''), 'null'), '^"|"$', '') AS properties___person_property
     FROM person
     WHERE and(equals(person.team_id, 99999), in(tuple(person.id, person.version),
                                                   (SELECT person.id AS id, max(person.version) AS version
                                                    FROM person
                                                    WHERE equals(person.team_id, 99999)
                                                    GROUP BY person.id
                                                    HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))))) SETTINGS optimize_aggregation_in_order=1) AS raw_session_replay_events__pdi__person ON equals(raw_session_replay_events__pdi.raw_session_replay_events__pdi___person_id, raw_session_replay_events__pdi__person.id)
  WHERE and(equals(session_replay_events.team_id, 99999), ifNull(equals(raw_session_replay_events__pdi__person.properties___person_property, 'true'), 0))
  GROUP BY session_replay_events.session_id
  ORDER BY session_replay_events.session_id ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestFilterSessionReplaysBySessions.test_select_by_duration_with_session_duration_filter
  '''
  SELECT DISTINCT session_replay_events.session_id AS session_id
  FROM session_replay_events
  LEFT JOIN
    (SELECT dateDiff('second', min(toTimeZone(raw_sessions.min_timestamp, 'UTC')), max(toTimeZone(raw_sessions.max_timestamp, 'UTC'))) AS duration,
            raw_sessions.session_id_v7 AS session_id_v7
     FROM raw_sessions
     WHERE equals(raw_sessions.team_id, 99999)
     GROUP BY raw_sessions.session_id_v7) AS raw_session_replay_events__session ON equals(toUInt128(accurateCastOrNull(session_replay_events.session_id, 'UUID')), raw_session_replay_events__session.session_id_v7)
  WHERE and(equals(session_replay_events.team_id, 99999), greater(raw_session_replay_events__session.duration, 3600))
  GROUP BY session_replay_events.session_id
  HAVING equals(dateDiff('second', min(toTimeZone(session_replay_events.min_first_timestamp, 'UTC')), max(toTimeZone(session_replay_events.max_last_timestamp, 'UTC'))), 3600)
  ORDER BY session_replay_events.session_id ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestFilterSessionReplaysBySessions.test_select_by_duration_without_session_filter
  '''
  SELECT DISTINCT session_replay_events.session_id AS session_id
  FROM session_replay_events
  WHERE equals(session_replay_events.team_id, 99999)
  GROUP BY session_replay_events.session_id
  HAVING equals(dateDiff('second', min(toTimeZone(session_replay_events.min_first_timestamp, 'UTC')), max(toTimeZone(session_replay_events.max_last_timestamp, 'UTC'))), 3600)
  ORDER BY session_replay_events.session_id ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestSelectAggregatedArrayColumns.test_select_group_uniq_array_array_column_0_all_urls
  '''
  SELECT session_replay_events.all_urls AS all_urls
  FROM
    (SELECT groupUniqArrayArray(session_replay_events.all_urls) AS all_urls,
            session_replay_events.session_id AS session_id
     FROM session_replay_events
     WHERE equals(session_replay_events.team_id, 99999)
     GROUP BY session_replay_events.session_id) AS session_replay_events
  WHERE equals(session_replay_events.session_id, '00000000-0000-0000-0000-000000000000')
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestSelectAggregatedArrayColumns.test_select_group_uniq_array_array_column_1_ai_tags_fixed
  '''
  SELECT session_replay_events.ai_tags_fixed AS ai_tags_fixed
  FROM
    (SELECT groupUniqArrayArray(session_replay_events.ai_tags_fixed) AS ai_tags_fixed,
            session_replay_events.session_id AS session_id
     FROM session_replay_events
     WHERE equals(session_replay_events.team_id, 99999)
     GROUP BY session_replay_events.session_id) AS session_replay_events
  WHERE equals(session_replay_events.session_id, '00000000-0000-0000-0000-000000000000')
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestSelectAggregatedArrayColumns.test_select_group_uniq_array_array_column_2_ai_tags_freeform
  '''
  SELECT session_replay_events.ai_tags_freeform AS ai_tags_freeform
  FROM
    (SELECT groupUniqArrayArray(session_replay_events.ai_tags_freeform) AS ai_tags_freeform,
            session_replay_events.session_id AS session_id
     FROM session_replay_events
     WHERE equals(session_replay_events.team_id, 99999)
     GROUP BY session_replay_events.session_id) AS session_replay_events
  WHERE equals(session_replay_events.session_id, '00000000-0000-0000-0000-000000000000')
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
